# HexVault

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md
apps/api/: Cargo.toml
apps/api/migrations/: 20260414133150_init_users.sql  20260415131745_vaults.sql  20260415133057_users_keys.sql  20260419203929_change_email_hash.sql  20260419212920_add_nonce_to_users.sql  20260420105004_reset.sql
apps/api/src/: error.rs  main.rs  state.rs
apps/api/src/auth/: claims.rs
apps/api/src/handlers/: auth.rs
apps/api/src/middlewares/: auth.rs  mod.rs  response.rs
apps/api/src/models/: user.rs
apps/api/src/routes/: auth.rs
apps/api/src/utilities/: log.rs
assets/: key_diagram.drawio
infrastructure/: docker-compose.yml
