[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Custom packages
crypto = { path = "../../packages/crypto" }

# Web framework
axum = "0.8.8"
dotenvy = "0.15.7"

# JSON serialization/deserialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid"] }

# async
tokio = { version = "1.51.1", features = ["full"] }

# CORS + security headers
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
uuid = { version = "1.23.0", features = ["serde", "v4"] }

# JWT
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
chrono = "0.4.44"
